// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`radioField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_1yffs0m0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <legend
                class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
              >
                Label
              </legend>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n43p"
            >
              <div
                class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
              >
                <div
                  aria-disabled="false"
                  class="uv_v3r5nr4 uv_v3r5nr2"
                  data-checked="false"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_v3r5nra"
                    id="_r_3_"
                    name="radio"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_v3r5nrb"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_v3r5nre"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_v3r5nrd"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_v3r5nrc"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                    for="_r_3_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
              >
                <div
                  aria-disabled="false"
                  class="uv_v3r5nr4 uv_v3r5nr2"
                  data-checked="true"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_v3r5nra"
                    id="_r_9_"
                    name="radio"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_v3r5nrb"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_v3r5nre"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_v3r5nrd"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_v3r5nrc"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                    for="_r_9_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;

exports[`radioField > should trigger events correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <div
        class="uv_xf61n40 uv_xf61n42d uv_xf61n43p"
      >
        <fieldset
          class="uv_1yffs0m0"
        >
          <div
            class="uv_xf61n40 uv_xf61n42d uv_xf61n45p"
          >
            <div
              class="uv_xf61n40 uv_xf61n42d uv_xf61n45j"
            >
              <legend
                class="uv_l58dz70 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsn uv_1do42ls1a uv_1do42ls32"
              >
                RadioGroupField events
              </legend>
            </div>
            <div
              class="uv_xf61n40 uv_xf61n4v uv_xf61n42d uv_xf61n43p"
            >
              <div
                class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
              >
                <div
                  aria-disabled="false"
                  class="uv_v3r5nr4 uv_v3r5nr2"
                  data-checked="true"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_v3r5nra"
                    id="_r_i_"
                    name="test"
                    type="radio"
                    value="value-1"
                  />
                  <svg
                    class="uv_v3r5nrb"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_v3r5nre"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_v3r5nrd"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_v3r5nrc"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                    for="_r_i_"
                  >
                    Radio 1
                  </label>
                </div>
              </div>
              <div
                class="uv_v3r5nr0 uv_xf61n40 uv_xf61n42d uv_xf61n45j"
              >
                <div
                  aria-disabled="false"
                  class="uv_v3r5nr4 uv_v3r5nr2"
                  data-checked="false"
                  data-invalid="false"
                >
                  <input
                    aria-disabled="false"
                    class="uv_v3r5nra"
                    id="_r_o_"
                    name="test"
                    type="radio"
                    value="value-2"
                  />
                  <svg
                    class="uv_v3r5nrb"
                    viewBox="0 0 24 24"
                  >
                    <title>
                      radio
                    </title>
                    <g>
                      <circle
                        class="uv_v3r5nre"
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="6"
                      />
                      <circle
                        cx="12"
                        cy="12"
                        r="10"
                        stroke-width="2"
                      />
                      <circle
                        class="uv_v3r5nrd"
                        cx="12"
                        cy="12"
                        r="8"
                      />
                      <circle
                        class="uv_v3r5nrc"
                        cx="12"
                        cy="12"
                        r="5"
                      />
                    </g>
                  </svg>
                  <label
                    class="uv_v3r5nr7 uv_v3r5nr5 uv_v3r5nr8 uv_1do42ls0 uv_1do42ls4 uv_1do42lsb uv_1do42lsj uv_1do42ls1a uv_1do42ls32"
                    for="_r_o_"
                  >
                    Radio 2
                  </label>
                </div>
              </div>
            </div>
          </div>
        </fieldset>
      </div>
    </form>
  </div>
</DocumentFragment>
`;
